# prog-space-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  arucotest.cpp  calibration.cpp  conanfile.txt  db.cpp  debugwindow.cpp  graphics.cpp  http.cpp  httpserver.cpp  isananimal.lua  luadbtest.cpp  main.cpp  sourcecode.cpp  thermal_printer_escpos.py  vision.cpp  whensomeoneisafox.lua  whentime.lua  wish_test.py  youisafox.lua
SelbaWard/: ElasticSprite.cpp  ElasticSprite.h  Line.cpp  Line.h  Sprite3d.cpp  Sprite3d.h
ble/: ble_server.py
extras/: package-lock.json  package.json  proxyFlowerLamp.js  spotifyManager.js
scripts/: 10__outlinePrograms.lua  11__counting.lua  12__particle.lua  13__particleFast.lua  14__showWeather.lua  15__drawFrame.lua  16__subframeAnimation.lua  17__textEditor.lua  18__controlLights.lua  19__controlLights2.lua  1__foxisred.lua  20__calibration.lua  21__showFps.lua  27__movie.lua  28__movie.lua  29__pointingAt.lua  2__isananimal.lua  30__showPointingAt.lua  31__setFlower.lua  3__timeis.lua  4__whensomeoneisafox.lua  5__whentime.lua  6__youisafox.lua  7__darksky.lua  8__turtleSimulation.lua  9__animation.lua  foxisred.lua  isananimal.lua  particle-photon-rgb-web-sub.ino  timeis.lua  whentime.lua  youisafox.lua
